syntax = "proto3";

option go_package = "./pb";

import "memory_message.proto";


message CPU {
    string brand = 1;
    string name = 2;
    uint32 number_cores = 3;
    uint32 number_threads = 4;
    double min_frequency = 5;
    double max_frequency = 6;
}

message GPU {
    string brand = 1;
    string name = 2;
    double min_frequency = 3;
    double max_frequency = 4;
    Memory memory = 5;
}