syntax = "proto3";

option go_package = "./pb";


message Screen {
    enum Panel {
        UNKNOWN = 0;
        IPS = 1;
        OLED = 2;
    }

    message Resolution {
        uint32 width = 1;
        uint32 height = 2;
    }

    float size_inches = 1;
    Resolution resolution = 2;
    Panel panel = 3;
    bool touch = 4;
}